tests/fixtures/rules-tests/ok/PY-008-safe-fastapi-auth.py
# PY-008 SAFE: FastAPI proper JWT authentication with real verification
# Safe: both return True and return False paths exist
import jwt
from fastapi import Depends, HTTPException, status
from fastapi.security import HTTPBearer, HTTPAuthorizationCredentials

security = HTTPBearer()
SECRET_KEY = "real-secret-key-configured-in-env"


async def verify_token(credentials: HTTPAuthorizationCredentials = Depends(security)) -> dict:
    """Proper token verification with real decode logic."""
    try:
        payload = jwt.decode(
            credentials.credentials,
            SECRET_KEY,
            algorithms=["HS256"],
        )
        user_id = payload.get("sub")
        if user_id is None:
            raise HTTPException(status_code=401, detail="Invalid token payload")
        return {"user_id": user_id, "roles": payload.get("roles", [])}
    except jwt.ExpiredSignatureError:
        raise HTTPException(status_code=401, detail="Token expired")
    except jwt.InvalidTokenError:
        raise HTTPException(status_code=401, detail="Invalid token")
